aio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edge-cdn
  labels:
    name: edge-cdn
    tier: cdn
    app: manabakh
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vod-cache
  namespace: edge-cdn
  labels:
    app: vod-cache
spec:
  replicas: 4
  selector:
    matchLabels:
      app: vod-cache
  template:
    metadata:
      labels:
        app: vod-cache
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: worker
                    operator: In
                    values:
                      - "true"
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - vod-cache
                topologyKey: kubernetes.io/hostname
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: edge-vod-cache
          image: namipsg/manabakh:mcdn-r7
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "1Gi"
              cpu: "1000m"
            limits:
              memory: "16Gi"
              cpu: "3000m"
          
          
---
apiVersion: v1
kind: Service
metadata:
  name: vod-cache-service
  namespace: edge-cdn
  labels:
    app: vod-cache
spec:
  selector:
    app: vod-cache
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edge-vod-ingress
  namespace: edge-cdn
  labels:
    app: edge-cdn
    tier: cdn
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-cors-headers@kubernetescrd,traefik-compression@kubernetescrd,traefik-rate-limit@kubernetescrd,traefik-default-headers@kubernetescrd

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mcdn.manabakh.ir
      secretName: ssl-secret
  rules:
    - host: mcdn.manabakh.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vod-cache-service
                port:
                  number: 80
